# intesa-vincente-llm

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  test.py
intesa_vincente_llm/: enums.py
intesa_vincente_llm/game/: game.py
intesa_vincente_llm/listener/: factory.py  microphone_listener.py
intesa_vincente_llm/llm/: base.py  factory.py  openai.py  prompt_factory.py
intesa_vincente_llm/recognizer/: base.py  factory.py  whisper_openai.py
intesa_vincente_llm/utils/: openai.py  word_provider.py
words/: english.json  italian.json
